Adicionando metricas clusterizacao

--- a/Agrupamento/agrupamento.ipynb
+++ b/Agrupamento/agrupamento.ipynb
@@ -416,29 +416,8 @@
     "\n",
     "#### Silhueta\n",
     "\n",
-    "Métrica utilizada para medir a qualidade do agrupamento em termos de:\n",
-    "- **Separabilidade** entre clusters\n",
-    "- **Similaridade** de um objeto em relação ao seu cluster (**coesão**), quando comparado com outros clusters.\n",
-    "\n",
-    "A silhueta é um valor que vai de -1 a 1, onde um valor elevado indica que a observação corresponde bem ao seu próprio cluster, e mal aos clusters vizinhos.\n",
-    "\n",
-    "Para um ponto $i \\in C_i$: $a(i) = \\frac{1}{|C_i| - 1}\\sum_{j \\in C_i, i \\neq j} d(i,j)$ (distância média de $i$ em relação a todos os outros pontos de seu cluster)\n",
-    "\n",
-    "Isso é, $a(i)$ mede o quão boa é a atribuição de $i$ ao seu cluster (quanto menor o valor de $a$, melhor).\n",
-    "\n",
-    "Para um ponto $i \\in C_i$: $b(i) = min_{k \\neq i}\\frac{1}{|C_k|} \\sum_{j \\in C_k} d(i,j)$ (distância média de $i$ em relação a todos pontos de um cluster vizinho)\n",
-    "\n",
-    "Ou seja, $b(i)$ é uma medida da dissimilaridade média de $i$ em relação ao cluster vizinho $C_k$.\n",
-    "\n",
-    "A silhueta pode ser definida como : $s(i) = \\frac{b(i) - a(i)}{max\\{a(i),b(i)\\}}$, se $|C_i| > 1$ e $s(i) = 0$, se $|C_i| = 1$\n",
-    "\n",
-    "OBS: Existe também a **silhueta simplificada**, na qual $a(i)$ e $b(i)$ são calculados como a distância da observação $i$ ao **centróide do cluster em questão**.\n",
-    "\n",
-    "===\n",
-    "\n",
     "Nesses métodos, utilizamos para todos os exemplos uma métrica que considera a similaridade entre um exemplo e o cluster no qual ele está (coesão), e também a similaridade com os clusters vizinhos (separação).\n",
-    "- Silhueta\n",
-    "A silhueta é uma métrica $s(t) \\in [-1, +1]$.\n",
+    "- Silhueta: A silhueta é uma métrica $s(t) \\in [-1, +1]$.\n",
     "- Se está próxima de +1, significa que o exemplo corresponde bem ao cluster em que ele se encontra.\n",
     "- Se está próximo de -1, significa que corresponde melhor aos clusters vizinhos. - Se está próximo de 0, significa que o exemplo se encontra na borda de dois clusters.\n",
     "Calculamos $s(t)$ para cada ponto do dataset e agrupamos os pontos segundo os clusters em que os pontos estão, em ordem decrescente do $s(t)$, como neste gráfico:\n",
@@ -527,7 +506,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
