--- a/Avaliação/avaliacao_modelos.ipynb
+++ b/Avaliação/avaliacao_modelos.ipynb
@@ -251,6 +251,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 1.3 Avaliação de Clusters\n",
+    "\n",
+    "### 1.3.1 Teste de Hopkins\n",
+    "Teste para realizar antes de aplicar um algoritmo de clusterização.\n",
+    "\n",
+    "Trata-se de um teste de hipóteses onde a hipótese nula é a de que **os dados foram gerados por um processo de Poisson** (e são portanto, uniformemente distribuidos de forma aleatória).\n",
+    "\n",
+    "A estatística de Hopkins indica se os dados estão altamente clusterizados (1), distribuídos de forma aleatória (0.5) ou distribuídos de forma uniforme (0).\n",
+    "\n",
+    "A formulação do teste é a seguinte:\n",
+    "\n",
+    "1. Seja $X$ um conjunto de $n$ pontos.\n",
+    "2. Consideramos uma amostra aleatória de $m << n$ pontos $x_i$\n",
+    "3. É gerado um conjunto $Y$ de $m$ pontos uniformemente distribuídos.\n",
+    "4. São definidas duas medidas:\n",
+    "- $u_i$, a distância de $y_i \\in Y$ ao seu vizinho mais próximo em $X$\n",
+    "- $w_i$, a distância dos $m$ pontos $x_i$ ao seus vizinhos mais próximos em $X$\n",
+    "5. A estatística é calculada como: $H = \\frac{\\sum_{i=1}^mu_i^d}{\\sum_{i=1}^mu_i^d+\\sum_{i=1}^mw_i^d}$\n",
+    "\n",
+    "\n",
+    "### 1.3.2 Avaliação da qualidade de clusters\n",
+    "\n",
+    "#### Método da Silhueta\n",
+    "\n",
+    "Métrica utilizada para medir a qualidade do agrupamento em termos de:\n",
+    "- **Separabilidade** entre clusters\n",
+    "- **Similaridade** de um objeto em relação ao seu cluster (**coesão**), quando comparado com outros clusters.\n",
+    "\n",
+    "A silhueta é um valor que vai de -1 a 1, onde um valor elevado indica que a observação corresponde bem ao seu próprio cluster, e mal aos clusters vizinhos.\n",
+    "\n",
+    "- Para um ponto $i \\in C_i$: $a(i) = \\frac{1}{|C_i| - 1}\\sum_{j \\in C_i, i \\neq j} d(i,j)$ (distância média de $i$ em relação a todos os outros pontos de seu cluster)\n",
+    "    - Isso é, $a(i)$ mede o quão boa é a atribuição de $i$ ao seu cluster (quanto menor o valor de $a$, melhor).\n",
+    "- Para um ponto $i \\in C_i$: $b(i) = min_{k \\neq i}\\frac{1}{|C_k|} \\sum_{j \\in C_k} d(i,j)$ (distância média de $i$ em relação a todos pontos de um cluster vizinho)\n",
+    "    - Ou seja, $b(i)$ é uma medida da dissimilaridade média de $i$ em relação ao cluster vizinho $C_k$.\n",
+    "\n",
+    "A silhueta pode ser definida como : $s(i) = \\frac{b(i) - a(i)}{max\\{a(i),b(i)\\}}$, se $|C_i| > 1$ e $s(i) = 0$, se $|C_i| = 1$\n",
+    "\n",
+    "OBS: Existe também a **silhueta simplificada**, na qual $a(i)$ e $b(i)$ são calculados como a distância da observação $i$ ao **centróide do cluster em questão**.\n",
+    "\n",
+    "#### Calinski-Harabasz\n",
+    "$\\frac{SS_B}{SS_W}\\frac{N-k}{k-1}$, onde\n",
+    "- $k$ é o número de clusters\n",
+    "- $N$ é o número de observações\n",
+    "- $SS_W$ é a variância **within** clusters (dentro do cluster)\n",
+    "    - Diminui a medida que o número de clusters aumenta\n",
+    "- $SS_B$ é a variância **between** clusters (entre clusters diferentes). \n",
+    "    - $SS_B = SS_T - SS_W$, onde $SS_T$  = Total sum of squares.\n",
+    "    - Mede a variância de todos os centroides em relação ao centroide do dataset como um todo.\n",
+    "    - Um $SS_B$ grande indica que os centroides estão bem espalhados, e não muito próximos uns aos outros\n",
+    "  \n",
+    "O valor de $\\frac{SS_B}{SS_W}$ será máximo no ponto em que o número de clusters é ótimo. \n",
+    "\n",
+    "OBS: às vezes, quando usamos essa medida, o valor ótimo de clusters encontrado será k=2 (máximo global). Porém, isso nem sempre será ideal dependendo do problema em que estamos querendo resolver (muitas vezes queremos mais de 2 clusters). Nesse caso, podemos procurar algum outro máximo local.\n",
+    "\n",
+    "Vantagens: \n",
+    "- O score é maior quando os clusters são densos e bem separados\n",
+    "- É rápido de calcular\n",
+    "\n",
+    "Desvantagens:\n",
+    "- Geralmente, o score é mais elevado para clusters convexos do que para outros tipos de clusters (ex: clusters baseados em densidade)\n",
+    "\n",
+    "#### Davies-Bouldin\n",
+    "Essa métrica representa a similaridade média entre clusters, onde a similaridade é uma medida que compara a distância entre clusters com o tamanho dos clusters. Quando essa métrica é baixa, temos um modelo com uma boa separação de clusters.\n",
+    "\n",
+    "- Similaridade: $R_{ij} = \\frac{s_i + s_j}{d_{ij}}$, onde\n",
+    "    - $s_i$ é a distância média entre cada par de pontos do cluster $i$ e o centroide daquele cluster.\n",
+    "    - $d_{ij}$ é a distância entre centroides $i$ e $j$.\n",
+    "- O index Davies-Bouldin é calculado como: $DB = \\frac{1}{k}\\sum_{i=1}^k\\text{max}_{i \\neq j}R_{ij}$\n",
+    "\n",
+    "Vantagens:\n",
+    "- Fácil de computar\n",
+    "- The index is computed only quantities and features inherent to the dataset. (?)\n",
+    "\n",
+    "Desvantagens:\n",
+    "- O uso de distância entre centroides limita a métrica ao espaço Euclidiano\n",
+    "- Geralmente, o score é mais elevado para clusters convexos do que para outros tipos de clusters (ex: clusters baseados em densidade)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2. Validação\n",
     "\n",
     "A validação out-of-sample se refere ao uso de dados “novos” (que não foram usados no treino) para avaliar o modelo.\n",
@@ -340,6 +422,13 @@
     "\n",
     "Assim, o modelo pode aprender _low level features_ do dataset de 2015-2017, que podem ser comuns entre todos os anos, e ao mesmo tempo \"mirar\" no dataset de 2018, que é o dataset em que desejamos que ele tenha um bom desempenho."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -494,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
